Fix logo alignment

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2238,6 +2238,21 @@
 		z-index: 10000;
 	}
 
+		#header #logo {
+			padding: 12px 8px 8px 20px; 
+			max-width: 316px;
+		}
+
+		#header #logo img {
+			max-width:100%;
+			max-height:100%;
+		}
+
+		#header #logo a {
+			text-decoration: none;
+			border: none; 
+		}
+
 		#header a {
 			color: #ffffff;
 			text-decoration: none;
@@ -2364,7 +2379,6 @@
 						position: relative;
 						text-indent: 4em;
 						width: 4em;
-						color: #000000;
 						/* Theoretically for IE 8 & 9 (more valid) */
 						/* ...but not required as filter works too */
 						/* should come BEFORE filter */
